[package]
name = "rand_pwd"
version = "1.0.0"
authors = ["TENX-S <ttenx@pm.me>"]
edition = "2018"
description = "Generate random password"
homepage = "https://github.com/TENX-S/rand_pwd"
repository = "https://github.com/TENX-S/rand_pwd"
license = "MIT"
readme = "README.md"
keywords = ["password", "random", "random_password"]


[dependencies]
rand = "0.7.3"
rayon = "1.3.1"
typenum = "1.12.0"
heapless = "0.5.5"
num-bigint = "0.3.0"
num-traits = "0.2.12"
lazy_static = "1.4.0"
