[package]
name = "rand_key"
version = "1.2.0"
authors = ["Ares <coldswind@pm.me>"]
edition = "2018"
description = "Generate random password"
documentation = "https://docs.rs/rand_pwd"
repository = "https://github.com/TENX-S/rand_key"
license = "MIT"
readme = "README.md"
keywords = ["password", "random", "random_password"]
categories = ["cryptography"]


[dependencies]
rand = "0.7.3"
rayon = "1.3.1"
thiserror = "1.0"
num-bigint = "0.3.0"
num-traits = "0.2.12"
parking_lot = "0.11.0"

[profile.release]
lto = true
panic = 'abort'
codegen-units = 1
